<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnglishPronunciation</string>
    <string name="action_settings">Settings</string>
    <string name="select">Select an activity:</string>
    <string name="learn">Learn</string>
    <string name="quiz">Quiz</string>
    <string name="exit">Exit</string>
    <string name="sound">Select sound:</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

</resources>