<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:stretchColumns="1" >

    <TableRow
        android:id="@+id/selectTableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/selectTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/select"
            android:textSize="18sp" />
      
    </TableRow>

    <TableRow
        android:id="@+id/learnTableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/learnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="center"
            android:text="@string/learn" />

    </TableRow>


    <TableRow
        android:id="@+id/quizTableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        <Button
            android:id="@+id/quizButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="center"
            android:text="@string/quiz"
             />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

         <Button
             android:id="@+id/exitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_span="2"
             android:gravity="center"
             android:text="@string/exit" />

    </TableRow>

</TableLayout>